# chicken-fight

./: CMakeLists.txt  README.md  bullet.h  chicken.h  drawer.h  game_read.h  main.cpp
AIPlayer/: AIController.h  main_ai.cpp
